--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "cheerio": "^1.0.0-rc.3",
     "commander": "^4.1.0",
     "lodash": "^4.17.15",
     "source-map-support": "^0.5.16"
