--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "axios-debug-log": "^0.7.0",
     "cheerio": "^1.0.0-rc.3",
     "commander": "^4.1.0",
     "debug": "^4.1.1",
