--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "cheerio": "^1.0.0-rc.3",
     "commander": "^4.1.0",
     "debug": "^4.1.1",
+    "listr": "^0.14.3",
     "lodash": "^4.17.15",
     "source-map-support": "^0.5.16"
   }
