--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "eslint-plugin-jest": "^23.6.0",
     "jest": "^25.1.0",
     "jest-cli": "^25.1.0",
-    "nock": "^12.0.3"
+    "nock": "^12.0.3",
+    "prettier": "^2.0.2"
   },
   "dependencies": {
     "axios": "^0.19.2",
